Tests/Fail/Test071.ML
(* Check that "it" is not in the initial basis. *)
val s = it;
